--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,4 +48,4 @@ jobs:
       run: /usr/bin/xcodebuild -version
       
     - name: Build and Test ios
-      run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=12.2,name=iPhone 8" ONLY_ACTIVE_ARCH=YES
+      run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=latest" ONLY_ACTIVE_ARCH=YES
