--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,28 +1,51 @@
 
 name: CI
+
+# Controls when the action will run. 
+# Triggers the workflow on pull request events but only for the master branch.
 on:
   pull_request:
     branches: [ "main" ]
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build-and-test"
   build-and-test-macos:
+    # The type of runner that the job will run on
     runs-on: macos-13
+
+    timeout-minutes: 8
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v3
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v4
 
-      - name: Select Xcode version
-        run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Build and test for macOS
-        run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_macOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+    - name: Select Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app
+      
+    - name: Xcode version
+      run: /usr/bin/xcodebuild -version
+      
+    - name: Build and Test
+      run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_macOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES
 
   build-and-test-ios:
+    # The type of runner that the job will run on
     runs-on: macos-13
+
+    timeout-minutes: 8
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@v3
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v4
 
-      - name: Select Xcode version
-        run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Build and test for iOS
-        run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" -destination 'platform=iOS Simulator,name=iPhone 13,OS=latest' CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+    - name: Select Xcode
+      run: sudo xcode-select -switch /Applications/Xcode.app
+      
+    - name: Xcode version
+      run: /usr/bin/xcodebuild -version
+      
+    - name: Build and Test ios
+      run: xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=latest" ONLY_ACTIVE_ARCH=YES
