--- a/.github/deployment/ExportOptions.plist
+++ b/.github/deployment/ExportOptions.plist
@@ -5,11 +5,11 @@
 	<key>destination</key>
 	<string>export</string>
 	<key>method</key>
-	<string>app-store</string>
+	<string>app-store-connect</string>
 	<key>provisioningProfiles</key>
 	<dict>
 		<key>com.essentialdeveloper.EssentialApp</key>
-		<string>EssentialApp Dev Profile</string>
+		<string>EssentialApp_Prod_Profile</string>
 	</dict>
 	<key>signingCertificate</key>
 	<string>Apple Distribution</string>
